--- a/education.css
+++ b/education.css
@@ -2,6 +2,16 @@ body {
 	background-color: #f2f2f2;
 }
 
+nav {
+	text-align: justify;
+	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
+	font-weight: bold;
+	text-shadow: 1px 1px 2px pink;
+	border: 10px;
+	word-spacing: 70px;
+	display: inline;
+}
+
 hr {
   	border:none;
   	height: 20px;
@@ -16,7 +26,7 @@ hr {
 h2 {
 	text-align: justify;
 	border: 10px;
-	font-family: Papyrus, Geneva, sans-serif;
+	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 	font-weight: bold;
 	text-shadow: 1px 1px 2px black;
 	text-decoration: underline;
@@ -25,14 +35,14 @@ h2 {
 
 h3, h4{
 	text-align: justify;
-	font-family: Papyrus, Geneva, sans-serif;
+	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 	font-style: italic;
 	font-weight: bold;
 }
 
 p {
 	text-align: justify;
-	font-family: Papyrus, Geneva, sans-serif;
+	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 	font-style: italic;
 	font-weight: bold;
 }
