--- a/index.css
+++ b/index.css
@@ -5,10 +5,11 @@ img {
   width: 20%;
   height: 30%;
   border-radius: 50%;
+  box-shadow:  0 0 8px 8px rgb(163, 156, 161, 0.6);
 }
 
 body {
-	background-image: url(projects.jpg);
+	background-image: white;
 	background-size: cover;
 }
 
@@ -31,9 +32,23 @@ nav {
 	text-align: center;
 	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 	font-weight: bold;
-	text-shadow: 1px 1px 2px pink;
 	border: 10px;
 	word-spacing: 30px;
+}
+
+a {
+	background-color: black;
+  	color: white;
+  	padding: 10px 20px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	border-radius: 0px 50px 50px 50px;
+  	box-shadow: 3px 3px 5px 4px #ccc;
+}
+
+a:hover, a:active {
+  background-color: rgb(104, 249, 245);
 }
 
 
@@ -43,5 +58,7 @@ section {
 	font-weight: bold;
 	font-style: italic;
 	font-size: 15px;
+	max-width: 50%;
+	margin: auto;
 }
 
