--- a/skills.css
+++ b/skills.css
@@ -1,30 +1,40 @@
 body {
-	background-color: #f2f2f2;
+	background-image: white;
+	background-size: cover;
 }
 
 nav {
 	text-align: justify;
 	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 	font-weight: bold;
-	text-shadow: 1px 1px 2px pink;
 	border: 10px;
 	word-spacing: 70px;
 	display: inline;
 }
 
+a {
+	background-color: black;
+  	color: white;
+  	padding: 10px 20px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	border-radius: 0px 50px 50px 50px;
+  	box-shadow: 3px 3px 5px 4px #ccc;
+}
+
+a:hover, a:active {
+  background-color: rgb(104, 249, 245);
+}
+
 hr {
-  	border:none;
-  	height: 20px;
- 	width: 100%;
-	height: 50px;
-	margin-top: 0;
-	border-bottom: 1px solid #1f1209;
-	box-shadow: 0 20px 20px -20px #333;
-  	margin: -50px auto 10px; 
+  	border: 0;
+  	height: 0;
+  	box-shadow: 0 0 10px 1px black;
 }
 
 h2 {
-	text-align: justify;
+	text-align: center;
 	border: 10px;
 	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 	font-weight: bold;
@@ -34,8 +44,10 @@ h2 {
 }
 
 h3 {
-	text-align: justify;
+	text-align: center;
 	font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
 	font-weight: bold;
 	font-style: italic;
+	max-width: 50%;
+	margin: auto;
 }
